--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix"
+    "lint": "next lint --fix ./src"
   },
   "engines": {
     "node": "^20.11.0",
@@ -22,10 +22,11 @@
     "@fullcalendar/react": "^6.1.10",
     "@fullcalendar/scrollgrid": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
-    "@hufs-ezport/api-client": "0.0.1",
+    "@hufs-ezport/api-client": "^1.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "5.3.1",
     "bootstrap-icons": "^1.11.3",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "next": "14.0.4",
     "react": "^18",
