--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix ./src"
+    "lint": "next lint --fix ./src",
+    "lint:es": "eslint --fix ./src/**/*.{js,jsx}"
   },
   "engines": {
     "node": "^20.11.0",
@@ -26,12 +27,12 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "5.3.1",
     "bootstrap-icons": "^1.11.3",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "next": "14.0.4",
     "react": "^18",
     "react-bootstrap": "^2.10.1",
-    "react-dom": "^18",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
